force-app/main/default/objects/Account/fields/Ardhisasa_Number__c.field-meta.xml
<CustomField>
    <fullName>Ardhisasa_Number__c</fullName>
    <label>Ardhisasa Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>