force-app/main/default/objects/Account/fields/Brought_in_By__c.field-meta.xml
<CustomField>
    <fullName>Brought_in_By__c</fullName>
    <businessOwnerUser>eric.bengi@bma.co.ke</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brought in By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>