force-app/main/default/objects/Account/fields/Certificate_of_Incorporation_Business_No__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Incorporation_Business_No__c</fullName>
    <externalId>true</externalId>
    <label>Certificate of Incorporation/Business No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>