force-app/main/default/objects/Account/fields/Cessation_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Cessation_of_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cessation of Company</label>
    <type>Checkbox</type>
</CustomField>