force-app/main/default/objects/Account/fields/Client_Group__c.field-meta.xml
<CustomField>
    <fullName>Client_Group__c</fullName>
    <label>Client Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Group</valueSetName>
    </valueSet>
</CustomField>