force-app/main/default/objects/Account/fields/Client_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Information_Status__c</fullName>
    <label>Client Information Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>To add more details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>