force-app/main/default/objects/Account/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <externalId>true</externalId>
    <label>Client Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>