force-app/main/default/objects/Account/fields/Convert_to_Estate_Trust__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Estate_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Estate/Trust</label>
    <type>Checkbox</type>
</CustomField>