force-app/main/default/objects/Account/fields/Google_Drive_KYC_KYB_Files__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_KYC_KYB_Files__c</fullName>
    <label>Google Drive KYC &amp; KYB Files</label>
    <type>Url</type>
</CustomField>