force-app/main/default/objects/Account/fields/Google_Maps_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Link__c</fullName>
    <label>Google Maps Link</label>
    <type>Url</type>
</CustomField>