force-app/main/default/objects/Account/fields/Health_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Health_Indicator__c</fullName>
    <description>Health indicator for client with the star indicating excellent and red indicating critical.</description>
    <formula>IF( Client_Healt_Score__c *100 &gt;= 95,&quot;🌟&quot;,
IF(Client_Healt_Score__c *100 &gt;= 80, &quot;🟢&quot;,
    IF(Client_Healt_Score__c *100 &gt;= 70, &quot;🟡&quot;,
      IF(Client_Healt_Score__c *100 &gt;= 50, &quot;🟠&quot;,
        IF(Client_Healt_Score__c *100 &gt;= 30, &quot;🟣&quot;,
          &quot;🔴&quot;
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Health indicator for client with the star indicating excellent and red indicating critical.</inlineHelpText>
    <label>Health Indicator</label>
    <type>Text</type>
</CustomField>