force-app/main/default/objects/Account/fields/HISA_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>HISA_Client_Number__c</fullName>
    <label>HISA Client Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>