force-app/main/default/objects/Account/fields/KRA_PIN_Number__c.field-meta.xml
<CustomField>
    <fullName>KRA_PIN_Number__c</fullName>
    <externalId>true</externalId>
    <label>KRA PIN Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>