force-app/main/default/objects/Account/fields/Location_of_Client__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Client__c</fullName>
    <label>Location of Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nairobi</fullName>
            </value>
            <value>
                <fullName>Mombasa</fullName>
            </value>
            <value>
                <fullName>Kisumu</fullName>
            </value>
            <value>
                <fullName>Nyeri</fullName>
            </value>
            <value>
                <fullName>Meru</fullName>
            </value>
            <value>
                <fullName>Eldoret</fullName>
            </value>
            <value>
                <fullName>Machakos</fullName>
            </value>
            <value>
                <fullName>Nanyuki</fullName>
            </value>
            <value>
                <fullName>Thika</fullName>
            </value>
            <value>
                <fullName>Naivasha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>