force-app/main/default/objects/Account/fields/ortoo_e2a__Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>ortoo_e2a__Thread_Id__c</fullName>
    <formula>&quot;Ref&quot; &amp; 
SUBSTITUTE( 
IF(MID($Organization.Id, 8, 1) = &quot;0&quot;, 
SUBSTITUTE(TRIM(&quot;{&quot; &amp; SUBSTITUTE(LEFT($Organization.Id, 7), &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;) &amp; 
&quot;.&quot; &amp; 
SUBSTITUTE(TRIM(SUBSTITUTE(RIGHT($Organization.Id, 7), &quot;0&quot;, &quot; &quot;) + &quot;}&quot;), &quot; &quot;, &quot;0&quot;), 
&quot;{&quot; &amp; LEFT($Organization.Id, 7) &amp; &quot;.&quot; &amp; RIGHT($Organization.Id, 8) &amp; &quot;}&quot; 
) 
&amp; 
IF(MID(Id, 8, 1) = &quot;0&quot;, 
SUBSTITUTE(TRIM(&quot;{&quot; &amp; SUBSTITUTE(LEFT(Id, 7), &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;) &amp; 
&quot;.&quot; &amp; 
SUBSTITUTE(TRIM(SUBSTITUTE(RIGHT(Id, 7), &quot;0&quot;, &quot; &quot;) + &quot;}&quot;), &quot; &quot;, &quot;0&quot;), 
&quot;{&quot; &amp; LEFT(Id, 7) &amp; &quot;.&quot; &amp; RIGHT(Id, 8) &amp; &quot;}&quot; 
), 
&quot;}{&quot;, &quot;:&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread Id</label>
    <type>Text</type>
</CustomField>