force-app/main/default/objects/Account/fields/Reason_for_Cessation_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cessation_of_Company__c</fullName>
    <label>Reason for Cessation of Company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>