force-app/main/default/objects/Account/fields/Reason_to_convert_to_Estate_Trust__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_convert_to_Estate_Trust__c</fullName>
    <label>Reason to convert to Estate/Trust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upon Request</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>