force-app/main/default/objects/Account/fields/Stats__c.field-meta.xml
<CustomField>
    <fullName>Stats__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stats</valueSetName>
    </valueSet>
</CustomField>