force-app/main/default/objects/Account/fields/Status_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Reporting_Date__c</fullName>
    <description>Date to update client</description>
    <inlineHelpText>Date to update client</inlineHelpText>
    <label>Status Reporting Date</label>
    <type>Date</type>
</CustomField>