force-app/main/default/objects/Account/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <description>Capture organization details</description>
    <label>Corporate</label>
</RecordType>