force-app/main/default/objects/Account/recordTypes/Hisa_Client.recordType-meta.xml
<RecordType>
    <fullName>Hisa_Client</fullName>
    <active>true</active>
    <description>Capture Hisa details</description>
    <label>Hisa Client</label>
</RecordType>