force-app/main/default/objects/Account/validationRules/Account_Convert_to_Estate.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Convert_to_Estate</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
Convert_to_Estate_Trust__c,
ISBLANK(TEXT(Reason_to_convert_to_Estate_Trust__c))
)</errorConditionFormula>
    <errorDisplayField>Reason_to_convert_to_Estate_Trust__c</errorDisplayField>
    <errorMessage>Reason to convert to Estate/Trust required if checkbox is selected</errorMessage>
</ValidationRule>