force-app/main/default/objects/Account/validationRules/Cessation_of_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Cessation_of_Company</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Cessation_of_Company__c), (LEN(Reason_for_Cessation_of_Company__c ) &lt; 1))</errorConditionFormula>
    <errorDisplayField>Reason_for_Cessation_of_Company__c</errorDisplayField>
    <errorMessage>Reason for Cessation of Company is a required field when Cessation of Company is checked</errorMessage>
</ValidationRule>