force-app/main/default/objects/Account/validationRules/Client_Number_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Number_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(New_or_Old_Client__c, &quot;Old&quot;),
ISBLANK(Client_Number__c)
)</errorConditionFormula>
    <errorDisplayField>Client_Number__c</errorDisplayField>
    <errorMessage>Please fill in the Client Number field.</errorMessage>
</ValidationRule>