force-app/main/default/objects/Account/validationRules/HISA_Client_Number_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>HISA_Client_Number_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(New_or_Old_Client__c, &quot;Old&quot;),
ISBLANK(HISA_Client_Number__c),
$RecordType.DeveloperName = &quot;Hisa_Client&quot;
)</errorConditionFormula>
    <errorDisplayField>HISA_Client_Number__c</errorDisplayField>
    <errorMessage>Please fill in the HISA Client Number field.</errorMessage>
</ValidationRule>