force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>HISA_Client_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_Number__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Client_Information_Status__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Clients</label>
</ListView>