force-app/main/default/objects/Account/listViews/Individual_Clients.listView-meta.xml
<ListView>
    <fullName>Individual_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Stats__c</columns>
    <columns>Client_Group__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Individual</value>
    </filters>
    <label>Individual Clients</label>
</ListView>