force-app/main/default/objects/Account/listViews/More_details_Client_Information_Status.listView-meta.xml
<ListView>
    <fullName>More_details_Client_Information_Status</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client_Information_Status__c</field>
        <operation>equals</operation>
        <value>To add more details</value>
    </filters>
    <label>More details Client Information Status</label>
</ListView>